# deribit-fix

./: .gitignore  CMakeLists.txt  README.md
cmake/: AddSubdirectories.cmake  FindQuickfix.cmake  GroupSources.cmake
src/: CMakeLists.txt  config.h  main.cpp  testing_strategy.cpp  testing_strategy.h
src/argparse/: argparse.h
src/config_file/: config_file.h
src/definitions/: basic_types.h  execution_report.h  instrument.h  market_update.h  mass_cancel_report.h  order.h  order_cancel_reject.h  position.h  to_string.h
src/gamma_scalper/: gamma_scalper.cpp  gamma_scalper.h  levels.cpp  levels.h
src/pricing/: black_scholes.cpp  black_scholes.h
src/quickfix/: message_parser_helpers.h  quickfix.cpp  quickfix.h  quickfix_log_replayer.h  quickfix_user.h
src/quickfix/base64/: README  base64.cpp  base64.h
src/quickfix/messages/: FIX44.xml
